--- a/model.ipynb
+++ b/model.ipynb
@@ -680,7 +680,7 @@
         "    y.append(all_sims[i][1])\n",
         "\n",
         "  val_acc = accuracy_score(y, y_pred)\n",
-        "  f1_scores = f1_score(y_true, y_pred, average=None)\n",
+        "  f1_scores = f1_score(y, y_pred, average=None)\n",
         "\n",
         "  return y,y_pred,np.mean(all_val_loss),val_acc,f1_scores\n",
         "\n"
